# loader

./: .gitignore  README.md  TODO.md  build-live-image.sh  embed_userspace.sh
kernel-efi/: .gitignore  BOOTX64.EFI  Cargo.toml
kernel-efi/.cargo/: config.toml
kernel-efi/src/: acpi.rs  console.rs  filesystem.rs  framebuffer.rs  keyboard.rs  main.rs  mouse.rs  native_console.rs  runtime.rs  shell.rs  syscall.rs  theme.rs  userspace_bin.rs  vga_console.rs
kernel-efi/src/keyboard/: mod.rs  ps2.rs  usb.rs
kernel-efi/src/usb/: device.rs  dma.rs  ehci.rs  hid.rs  mod.rs  pci.rs  trb.rs  xhci.rs
rustux/: build.rs
rustux/src/: main.rs
rustux/src/arch/amd64/: apic.rs
rustux/src/drivers/keyboard/: mod.rs  ps2.rs
rustux/src/mm/: allocator.rs
src/kernel/lib/: gfxconsole.rs  vga_font.rs
uefi-loader/: .gitignore  BOOTX64.EFI  Cargo.toml  bootx64.efi
uefi-loader/.cargo/: config.toml
uefi-loader/src/: main.rs
userspace/: Cargo.toml  linker.ld
userspace/.cargo/: config.toml
userspace/src/: main.rs
