[package]
name = "rustux-kernel-efi"
version = "0.1.0"
edition = "2021"
authors = ["The Rustux Authors"]

[dependencies]
# UEFI dependencies
uefi = { version = "0.36", features = ["alloc"] }
uefi-raw = "0.13"
log = "0.4"

[features]
default = []
early-uefi-console-only = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

[[bin]]
name = "rustux-kernel-efi"
path = "src/main.rs"
test = false
bench = false
